kuber/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: myappsvc
  namespace: monitoring
spec:
  ports:
  - port: 80
    name: http-myapp
    targetPort: 80
  # Kubernetes-метки селектора, использованные в шаблоне подов при создании объекта Deployment.
  selector:
    app: myapp
